--- a/css/style.css
+++ b/css/style.css
@@ -2067,10 +2067,16 @@ ol {
 @media only screen and (max-width: 479px) {
 	.logo-area {
 		padding: 20px 30px 30px;
+		height: 100px;
 	}
 	.header-area {
 		background: #121212;
 		padding-right: 66px;
+		height: 100px;
+	}
+
+	.fotologo {
+		padding-bottom: 10px;
 	}
 	.nav-menu {
 		width: 100%;
