fix image in mobile

--- a/style.css
+++ b/style.css
@@ -1971,7 +1971,7 @@ ol {
 	}
 	.hero-slider .hero-slide-item {
 		padding: 150px 0;
-		height: auto;
+		height: 600px;
 	}
 	.slide-content h2 {
 		font-size: 60px;
